# ble-managed

./: .gitignore  README.md  socks-forwarder_0.1_arm64.deb  socks-forwarder_0.2_arm64.deb  socks-forwarder_0.3_arm64.deb  socks-forwarder_0.7_arm64.deb  socks-forwarder_0.8_arm64.deb
dns_resolver/: go.mod  main.go
etc/: README.md  bluez_5.79-2~bpo12+1_arm64.deb  commands.sh  debug_commands.sh  install_bluez.sh
etc/bandwidth-measure/: README.md  go.mod  main.go
fake_flutter_viam_server/: README.md  pubspec.yaml
fake_flutter_viam_server/lib/: main.dart
fake_flutter_viam_server/test/: widget_test.dart
go_client/: Makefile  go.mod  go.sum  main.go  output.txt
go_server/: go.mod  main.go
golang_proxy/: go.mod  go.sum  main.go
golang_viam_server/: ble-socks  go.mod  go.sum  main.go
golang_viam_server/central/: central.go  l2cap.c  l2cap.h
golang_viam_server/etc/: a.out  commands.sh  main.c
golang_viam_server/forward/: forward.go
grill_proxy/: Cargo.toml  Makefile  README.md  output.txt
grill_proxy/src/: central.rs  main.rs  peripheral.rs  socks.rs
grill_proxy/src/socks/: chunker.rs  mod.rs  mux.rs
phone_proxy/: README.md  pubspec.yaml
rust_viam_server/: Cargo.toml
socks-forwarder/: Cargo.toml  Makefile  README.md
socks-forwarder/debian/: .gitignore  changelog  control  copyright  install  rules
socks-forwarder/etc/bluetooth/: viam-disable-reverse-discovery.conf
socks-forwarder/etc/systemd/system/viam-agent.service.d/: socks-forwarder.conf
socks-forwarder/lib/systemd/system/: socks-forwarder.service
socks-forwarder/src/: central.rs  env.rs  main.rs  peripheral.rs
socks-forwarder/src/socks/: chunker.rs  mod.rs  mux.rs
(+19 files in other folders)
