[package]
name = "rust_viam_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { git = "https://github.com/edaniels/bluer.git", rev="a96a001f98b7f9e6e80ea11af1eb319c1320987f", features = ["bluetoothd", "l2cap"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.22"
tokio = { version = "1.38.0", features = ["io-std"] }
uuid = "1.9.1"
