[package]
name = "rust_viam_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bluer = { version="0.17.3", features = ["bluetoothd", "l2cap"] }
dashmap = "6.0.1"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.22"
tokio = { version = "1.38.0", features = ["io-std"] }
uuid = "1.9.1"
